chore: work on v2
- move storage keys to an enum
- remove need for slot="main" on branded types
- setup WhatsOn view
- add FAQs view

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -309,8 +309,6 @@ ifrc:
   footer:
     # appName: PlanetRed
     # privacy: Privacy
-    # privacyUrl: /privacy
     # guidelines: Community Guidelines
-    # guidelinesUrl: /guidelines
     # terms: Terms & Conditions
-    # termsUrl: /terms
+    # faqs: FAQs
