--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -489,8 +489,6 @@ ifrc:
   footer:
     appName: PlanetRed
     privacy: Privacy
-    privacyUrl: /privacy
     guidelines: Community Guidelines
-    guidelinesUrl: /guidelines
     terms: Terms & Conditions
-    termsUrl: /terms
+    faqs: FAQs
