chore: work on v2
- start ScheduleView
- add schedule computed props
- remove deconf-ui hack
- localise whatsOnView css hack

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -486,6 +486,13 @@ ifrc:
     # conferenceOver: >
     #   Climate:Red has now ended, but it's not over! You can still access the sessions and keynotes on the schedule tab!
 
+  schedule:
+    title: Schedule
+    allSessions: All
+    userSessions: User
+    hidePast: Hide previous sessions
+    showPast: Show previous sessions
+
   footer:
     appName: PlanetRed
     privacy: Privacy
