--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -1,3 +1,232 @@
+#
+# v2 - Deconf
+#
+deconf:
+  appLayout:
+    atrium: Atrium
+    whatsOn: Whats On
+    schedule: Schedule
+    coffeeChat: Coffee Chat
+    helpDesk: Help Desk
+
+  sideTabs:
+    unavailable: Unavailable
+
+  apiError:
+    title: Something went wrong
+    content: We're having a bit of trouble, try refresing or coming back later.
+    retry: 'Retrying in {0}'
+
+  appLoading:
+    message: Loading...
+
+  scheduleBlock:
+    workshopTitle: Interactive workshops
+    workshopDescription: Participate in one of the following interactive workshops.
+    showWorkshops: Show all
+    hideWorkshops: Hide all
+    workshops: 'None | 1 workshop | {n} workshops'
+
+  general:
+    hours: hours | hour | hours
+    minutes: minutes | minute | minutes
+    seconds: seconds | second | seconds
+    genericError: Something went wrong, please try again
+
+  miniSession:
+    view: View
+    live: Live
+
+  featuredSessions:
+    title: Featured Sessions
+    action: View Schedule
+
+  scheduleFilters:
+    query: Search
+    showFilters: Show filters
+    hideFilters: Hide filters
+    clearFilters: Clear filters
+    dateFilter: Date
+    typeFilter: Type
+    trackFilter: Track
+    themeFilter: Theme
+    recordedFilter: Is Recorded
+    offLabel: All
+    'yes': 'Yes'
+    'no': 'No'
+
+  attendanceSection:
+    loading: Fetching attendance
+    processing: Processing
+    registered: You are registered for this session
+    full: This session is full
+    spacesLeft: '{0}/{1} seats remaining.'
+    registerButton: Register now
+    unregisterButton: Release my seat
+
+  timeSlot:
+    past: Past
+    live: Live
+
+  joinSession:
+    future: Preview session
+    present: Join session
+    past: View session
+
+  sessionAttributes:
+    isRecorded: Recorded
+    notRecorded: Not recorded
+
+  addToCalendar:
+    action: Add to calendar
+
+  sessionLink:
+    copy: copy
+    copied: copied
+
+  sessionState:
+    liveNow: Live Now
+    sessionOver: Session over
+    interest: 'no interest | 1 person is attending | {n} people are attending'
+
+  sessionEmbed:
+    openTeams: Open Teams meeting
+    openZoom: Open Zoom meeting
+    openHubs: Open Mozilla Hub
+    openSpatial: Open Spatial Chat
+    noEmbed: Something went wrong, there is nothing to show here
+
+  languageWarning:
+    message: 'Please note this session is only available in {0}'
+
+  navigationBar:
+    profile: Your profile
+    login: Login
+    interpret: Interpret mode
+    register: Register
+    unavailable: ' (Unavailable)'
+
+  whatsOn:
+    title: What's On
+    infoText: Browse the Schedule before release day
+
+  login:
+    title: تسجيل الدخول
+    infoText: >
+      بعد التسجيل ، سوف نرسل لك رسالة تأكيد بالبريد الإلكتروني. سيكون في البريد الإلكتروني رابط ، والذي سيسجل دخولك. ستنتهي صلاحية الرابط بعد 30 دقيقة. إذا لم تتلق أي شيء ، فيرجى التحقق من ملف الرسائل الغير مرغوب بها.
+    email:
+      label: البريد الإلكتروني
+      placeholder: e.g. dan@example.com
+      help: عنوان البريد الإلكتروني الذي سجلت به في المؤتمر
+    badEmail: البريد الإلكتروني غير جيد
+    doneText: تم إرسال رمز تسجيل الدخول
+    submitButton: طلب رمز تسجيل الدخول
+    registerLabel: Not registered yet?
+    registerAction: Register here
+
+  profile:
+    title: ملفك الشخصي
+    #actionLabel: Actions
+    logoutButton: تسجيل الخروج
+    #dangerLabel: Danger zone
+    deleteButton: حذف الحساب
+    deleteText: هذا دائم، هل أنت متأكد؟
+    ifrc:
+      emailText: بريدك الالكتروني
+      localeText: اللغة المختارة
+      whenText: تسجيل الدخول
+      #registeredText: Registered
+      nameText: الإسم
+      countryText: البلد
+      affiliationText: جهة الانتساب
+      #marketingText: Marketing
+
+  schedule:
+    title: جدول المواعيد
+    description: تصفح الجلسات المتاحة وقم بوضع خطة لتجربتك عن طريق إضافة تذكير إلى التقويم الخاص بك.
+    allSessions: الكل
+    #userSessions: User
+    hidePast: إخفاء الجلسات القديمة
+    showPast: إظهار الجلسات السابقة
+    #noResults: Nothing matched your query
+
+  session:
+    slot: البرنامج
+    countdown: Countdown # new
+    links: الرابط الإلكتروني
+    linkPreview: رابط الجلسة سيكون متاحا قبل 15 دقيقة من موعد بدء الجلسة
+    actions: الاجراءات
+    logIn: Log in to attend this session # new
+    speakers: المتحدث
+    zoomLink: Zoom Room # new
+    teamsLink: Teams Meeting # new
+    miroLink: Miro Board # new
+    generalLink: Link # new
+    backButton: Back to Schedule # new
+
+#
+# v2 - IFRC
+#
+ifrc:
+  general:
+    #appName: PlanetRed
+    #backToAtrium: Back to Atrium
+    #notSelected: (Please select)
+    #genericError: Something went wrong, please try again
+    #'yes': 'Yes'
+    #'no': 'No'
+
+  register:
+    title: تسجيل
+    infoText: >
+      التسجيل لمؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ
+    name:
+      label: الاسم الكامل
+      # placeholder: e.g. Dan Howard
+      help: اسمك الكامل
+    email:
+      label: عنوان البريد الالكتروني
+      # placeholder: e.g. dan@example.com
+      help: ستستخدم بريدك الإلكتروني لتسجيل الدخول إلى المؤتمر
+    language:
+      label: لغة
+      help: ستكون هذه هي لغتك المفضلة للمؤتمر
+    country:
+      label: البلد
+      help: حتى نتمكن من رؤية مدى تغطية المؤتمر
+    affiliation:
+      label: جهة الانتساب
+      placeholder: على سبيل المثال، موظف الاتحاد الدولي للصليب الأحمر والهلال الأحمر
+      help: 'جهة الانتماء (على سبيل المثال: موظف/متطوع/عضو مجلس إدارة/عضو جمعية وطنية/الاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر/اللجنة الدولية للصليب الأحمر/المركز المرجعي، أو غير ذلك )'
+    submitButton: تسجيل
+    consentText: أؤكد أنني قد قرأت وأوافق على السياسات الموجودة في الرابط أدناه
+    termsLink: الأحكام والشروط
+    privacyLink: سياسة الخصوصية
+    doneText: >
+      لقد أرسلنا إليك بريدًا إلكترونيًا للتحقق
+    # loginLabel: Already registered?
+    # loginAction: Log in here
+
+  atrium:
+    title: الملتقى الرئيسي
+    sponsorHeading: شركاء
+    onlineNow: مباشر الآن
+    carbonSaved: التقليل من انبعاثات الكربون
+    #twitterTitle: Social
+    twitterSubtitle: 'تغريدة مع #PlanetRed'
+    twitterUrl: 'https://twitter.com'
+    #conferenceOver: Planet:Red has now ended, but it's not over! You can still access the sessions and keynotes on the schedule tab!
+
+  footer:
+    #appName: PlanetRed
+    #privacy: Privacy
+    #guidelines: Community Guidelines
+    #terms: Terms & Conditions
+    #faqs: FAQs
+#
+# ============================== OLD ==============================
+#
+
 general:
   message: مرحبا بالعالم
   loginButton: تسجيل الدخول
@@ -15,27 +244,6 @@ sessions:
     plenary: المتحدثون
     panel: حلقات نقاش
     sessions: جلسات
-
-session:
-  title: عرض الجلسة
-  speakerHeading: المتحدث
-  hostHeading: مضيف الجلسة
-  infoHeading: معلومات عن الجلسة
-  linksHeading: الرابط الإلكتروني
-  showPoll: تفعيل استطلاع الرأي
-  seeMore: الاطلاع على المزيد
-  seeLess: الإطلاع بنسبة أقل
-  noInterpret: متصفحك لا يدعم خدمة الترجمة، نعتذر منك!
-  joinLiveQandA: انضم لحلقة الأسئلة و الأجوبة المباشرة
-  linksWillBeAvailable: رابط الجلسة سيكون متاحا قبل 15 دقيقة من موعد بدء الجلسة
-  sessionWillBeHostedIn: سيتم استضافة الجلسة من قبل
-  interestRegisteredConfirmation: تم تسجيل طلبكم !
-  personInterested: عدد الأشخاص المهتمين
-  scheduleHeading: البرنامج
-  actionsHeading: الاجراءات
-  hostedByHeading: مضيف الجلسة
-  contactHost: التواصل مع مضيف الجلسة
-  sessionOnlyAvailableIn: يرجى ملاحظة أن الجلسة متاحة فقط ضمن
 
 coffeechat:
   title: دردشة حول فنجان قهوة
@@ -156,62 +364,6 @@ oneToMany:
 videoEmbed:
   noLive: البث المباشر غير متاح حاليًا ، يرجى إعادة التحقق لاحقًا.
 
-schedule:
-  title: جدول المواعيد
-  description: تصفح الجلسات المتاحة وقم بوضع خطة لتجربتك عن طريق إضافة تذكير إلى التقويم الخاص بك.
-  close: إغلاق
-  past: الماضي
-  now: الآن
-  present: حالي
-  future: المستقبل
-  addToCalendar: إضافة إلى الجدول الزمني
-  showAll: إظهار الكل
-  hideAll: إخفاء الكل
-  hidePastSessions: إخفاء الجلسات القديمة
-  showPastSessions: إظهار الجلسات السابقة
-  dates:
-    ninth: 9 سبتمبر
-    tenth: سبتمبر 10
-  search: بحث
-  showingResultsFor: '"{0}"عرض النتائج ل'
-  redCrossRedCrescentMembersOnly: أعضاء الصليب الأحمر والهلال الأحمر فقط
-  filters:
-    all: الكل
-    showFilters: اظهار الفلاتر
-    clearFilters: إخفاء الفلاتر
-    date: التاريخ
-    track: مسار
-    interactivity:
-      interactivity: التفاعل
-      interactive: التفاعلية
-      nonInteractive: غير تفاعلي
-    platform:
-      platform: المنصة
-      zoom: Zoom
-    device:
-      device: الجهاز
-      desktopOnly: عبر جهاز الحاسوب فقط
-      mobileOnly: عبر الأجهزة المحمول فقط
-    recorded:
-      recorded: التسجيل
-      willBeRecorded: التسجيل سيكون متاحاَ
-      notRecorded: غير مسجلة
-  attributes:
-    sessionAttributes: خصائص الجلسة
-  actions:
-    viewSession: مشاهدة الجلسة
-    joinSession: الانضمام إلى الجلسة
-    previewSession: معاينة الجلسة
-    registerInterest: سجل الاهتمامات
-    registerInterestSubject: التسجيل - مهتم بجلسة المناخ
-    registerInterestBody: أنا مهتم بجلستكم في قمة المناخ
-    interestRegistered: المسجلين المهتمين
-  workshops:
-    workshop: ورشة عمل
-    workshops: ورشات العمل
-    title: ورشات العمل التفاعلية
-    description: شارك بإحدى ورش العمل التفاعلية التالية
-
 errors:
   title: حدث خطأ
   general: حدث خطأ غير متوقع ، يرجى المحاولة مرة أخرى
@@ -219,96 +371,3 @@ errors:
 
 faqs:
   title: أسئلة وأجوبة
-
-#
-# v2 - Deconf
-#
-deconf: {}
-
-#
-# v2 - IFRC
-#
-ifrc:
-  general:
-    # appName: PlanetRed
-    # backToAtrium: Back to Atrium
-    # notSelected: (Please select)
-    # genericError: Something went wrong, please try again
-
-  login:
-    title: تسجيل الدخول
-    infoText: >
-      بعد التسجيل ، سوف نرسل لك رسالة تأكيد بالبريد الإلكتروني. سيكون في البريد الإلكتروني رابط ، والذي سيسجل دخولك. ستنتهي صلاحية الرابط بعد 30 دقيقة. إذا لم تتلق أي شيء ، فيرجى التحقق من ملف الرسائل الغير مرغوب بها.
-    email:
-      label: البريد الإلكتروني
-      placeholder: e.g. dan@example.com
-      help: عنوان البريد الإلكتروني الذي سجلت به في المؤتمر
-    badEmail: البريد الإلكتروني غير جيد
-    doneText: تم إرسال رمز تسجيل الدخول
-    submitButton: طلب رمز تسجيل الدخول
-    # registerLabel: Not registered yet?
-    # registerAction: Register here
-
-  register:
-    title: تسجيل
-    infoText: >
-      التسجيل لمؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ
-    name:
-      label: الاسم الكامل
-      # placeholder: e.g. Dan Howard
-      help: اسمك الكامل
-    email:
-      label: عنوان البريد الالكتروني
-      # placeholder: e.g. dan@example.com
-      help: ستستخدم بريدك الإلكتروني لتسجيل الدخول إلى المؤتمر
-    language:
-      label: لغة
-      help: ستكون هذه هي لغتك المفضلة للمؤتمر
-    country:
-      label: البلد
-      help: حتى نتمكن من رؤية مدى تغطية المؤتمر
-    affiliation:
-      label: جهة الانتساب
-      placeholder: على سبيل المثال، موظف الاتحاد الدولي للصليب الأحمر والهلال الأحمر
-      help: 'جهة الانتماء (على سبيل المثال: موظف/متطوع/عضو مجلس إدارة/عضو جمعية وطنية/الاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر/اللجنة الدولية للصليب الأحمر/المركز المرجعي، أو غير ذلك )'
-    submitButton: تسجيل
-    consentText: أؤكد أنني قد قرأت وأوافق على السياسات الموجودة في الرابط أدناه
-    termsLink: الأحكام والشروط
-    privacyLink: سياسة الخصوصية
-    doneText: >
-      لقد أرسلنا إليك بريدًا إلكترونيًا للتحقق
-    # loginLabel: Already registered?
-    # loginAction: Log in here
-
-  profile:
-    title: ملفك الشخصي
-    emailText: بريدك الالكتروني
-    localeText: اللغة المختارة
-    whenText: تسجيل الدخول
-    # registeredText: Registered
-    nameText: الإسم
-    countryText: البلد
-    affiliationText: جهة الانتساب
-    logoutButton: تسجيل الخروج
-    deleteButton: حذف الحساب
-    deleteText: هذا دائم، هل أنت متأكد؟
-    # actionLabel: Actions
-    # dangerLabel: Danger zone
-
-  atrium:
-    title: الملتقى الرئيسي
-    sponsorHeading: شركاء
-    onlineNow: مباشر الآن
-    carbonSaved: التقليل من انبعاثات الكربون
-    # twitterTitle: Social
-    twitterSubtitle: 'تغريدة مع #PlanetRed'
-    twitterUrl: 'https://twitter.com'
-    # conferenceOver: |
-    #   _
-
-  footer:
-    # appName: PlanetRed
-    # privacy: Privacy
-    # guidelines: Community Guidelines
-    # terms: Terms & Conditions
-    # faqs: FAQs
