--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -1,3 +1,232 @@
+#
+# v2 - Deconf
+#
+deconf:
+  appLayout:
+    atrium: Atrium
+    whatsOn: Whats On
+    schedule: Schedule
+    coffeeChat: Coffee Chat
+    helpDesk: Help Desk
+
+  sideTabs:
+    unavailable: Unavailable
+
+  apiError:
+    title: Something went wrong
+    content: We're having a bit of trouble, try refresing or coming back later.
+    retry: 'Retrying in {0}'
+
+  appLoading:
+    message: Loading...
+
+  scheduleBlock:
+    workshopTitle: Interactive workshops
+    workshopDescription: Participate in one of the following interactive workshops.
+    showWorkshops: Show all
+    hideWorkshops: Hide all
+    workshops: 'None | 1 workshop | {n} workshops'
+
+  general:
+    hours: hours | hour | hours
+    minutes: minutes | minute | minutes
+    seconds: seconds | second | seconds
+    genericError: Something went wrong, please try again
+
+  miniSession:
+    view: View
+    live: Live
+
+  featuredSessions:
+    title: Featured Sessions
+    action: View Schedule
+
+  scheduleFilters:
+    query: Search
+    showFilters: Show filters
+    hideFilters: Hide filters
+    clearFilters: Clear filters
+    dateFilter: Date
+    typeFilter: Type
+    trackFilter: Track
+    themeFilter: Theme
+    recordedFilter: Is Recorded
+    offLabel: All
+    'yes': 'Yes'
+    'no': 'No'
+
+  attendanceSection:
+    loading: Fetching attendance
+    processing: Processing
+    registered: You are registered for this session
+    full: This session is full
+    spacesLeft: '{0}/{1} seats remaining.'
+    registerButton: Register now
+    unregisterButton: Release my seat
+
+  timeSlot:
+    past: Past
+    live: Live
+
+  joinSession:
+    future: Preview session
+    present: Join session
+    past: View session
+
+  sessionAttributes:
+    isRecorded: Recorded
+    notRecorded: Not recorded
+
+  addToCalendar:
+    action: Add to calendar
+
+  sessionLink:
+    copy: copy
+    copied: copied
+
+  sessionState:
+    liveNow: Live Now
+    sessionOver: Session over
+    interest: 'no interest | 1 person is attending | {n} people are attending'
+
+  sessionEmbed:
+    openTeams: Open Teams meeting
+    openZoom: Open Zoom meeting
+    openHubs: Open Mozilla Hub
+    openSpatial: Open Spatial Chat
+    noEmbed: Something went wrong, there is nothing to show here
+
+  languageWarning:
+    message: 'Please note this session is only available in {0}'
+
+  navigationBar:
+    profile: Your profile
+    login: Login
+    interpret: Interpret mode
+    register: Register
+    unavailable: ' (Unavailable)'
+
+  # TODO: new
+  whatsOn:
+    title: What's On
+    infoText: Browse the Schedule before release day
+
+  login:
+    title: Connexion
+    infoText: Après votre inscription, nous vous enverrons un email de confirmation. L'e-mail contiendra un lien qui vous connectera. Le lien expirera au bout de 30 minutes. Si vous ne recevez rien, veuillez vérifier votre dossier "Courriers indésirables".
+    email:
+      label: Adresse E-mail
+      placeholder: 'par exemple: geoff@example.com'
+      help: L'adresse e-mail avec laquelle vous vous êtes inscrit à la conférence
+    badEmail: Mauvais e-mail
+    doneText: Código de inicio de sesión enviado
+    submitButton: Demander un code de connexion
+    # registerLabel: Not registered yet?
+    # registerAction: Register here
+
+  profile:
+    title: Votre profil
+    #actionLabel: Actions
+    logoutButton: Se déconnecter
+    #dangerLabel: Danger zone
+    deleteButton: Supprimer le compte
+    deleteText: C'est permanent, êtes-vous sûr?
+    ifrc:
+      emailText: Votre adresse E-mail
+      localeText: Langue choisie
+      whenText: Connecté
+      # registeredText: Registered
+      nameText: Nom
+      countryText: Pays
+      affiliationText: Affiliation
+      #marketingText: Marketing
+
+  schedule:
+    title: Programme
+    description: Explorez les sessions disponibles et planifiez votre expérience en ajoutant des rappels à votre calendrier.
+    allSessions: Tous
+    #userSessions: User # new
+    hidePast: Cacher les sessions passées
+    showPast: Montrer les sessions passées
+    #noResults: Nothing matched your query # new
+
+  session:
+    slot: Programme
+    countdown: Countdown # new
+    links: Liens
+    linkPreview: Les liens des sessions seront disponibles 15 minutes avant l'heure de lancement.
+    actions: Actions
+    logIn: Log in to attend this session # new
+    speakers: Intervenants
+    zoomLink: Zoom Room # new
+    teamsLink: Teams Meeting # new
+    miroLink: Miro Board # new
+    generalLink: Link # new
+    backButton: Back to Schedule # new
+
+#
+# v2 - IFRC
+#
+ifrc:
+  general:
+    #appName: PlanetRed
+    #backToAtrium: Back to Atrium
+    #notSelected: (Please select)
+    #genericError: Something went wrong, please try again
+    #'yes': 'Yes'
+    #'no': 'No'
+
+  register:
+    title: Inscrivez
+    infoText: >
+      Inscrivez-vous à Climate:Red
+    name:
+      label: Nom complet
+      placeholder: 'par exemple: Dan Howard'
+      help: Votre nom complet
+    email:
+      label: l'adresse email
+      placeholder: 'par exemple: dan@example.com'
+      help: Vous utiliserez votre e-mail pour vous connecter à la conférence
+    language:
+      label: Langue
+      help: Ce sera votre langue principale pour la conférence
+    country:
+      label: Pays
+      help: Pour que nous puissions voir la portée de la conférence
+    affiliation:
+      label: Votre affiliation
+      placeholder: 'par exemple: Membre du personnel de la FICR'
+      help: Affiliation au mouvement Croix-Rouge Croissant-Rouge (par exemple, personnel / bénévole / membre du conseil d'administration / membre d’une Société nationale / FICR / CICR / centre de référence; ou aucun)
+    submitButton: Inscrivez
+    consentText: Je confirme avoir lu et accepté les conditions liées ci-dessous
+    termsLink: Termes et conditions
+    privacyLink: Politique de confidentialité
+    doneText: >
+      Nous vous avons envoyé un e-mail de vérification.
+    #loginLabel: Already registered?
+    #loginAction: Log in here
+
+  atrium:
+    title: Atrium
+    sponsorHeading: Partenaires
+    onlineNow: En ligne maintenant
+    carbonSaved: Des kilogrammes de CO₂ économisés
+    #twitterTitle: Social
+    twitterSubtitle: 'Tweeter avec #PlanetRed'
+    #twitterUrl: 'https://twitter.com'
+    #conferenceOver: Planet:Red has now ended, but it's not over! You can still access the sessions and keynotes on the schedule tab!
+
+  footer:
+    #appName: PlanetRed
+    #privacy: Privacy
+    #guidelines: Community Guidelines
+    #terms: Terms & Conditions
+    #faqs: FAQs
+#
+# ============================== OLD ==============================
+#
+
 general:
   message: Bonjour le monde
   loginButton: Se connecter
@@ -120,27 +349,6 @@ cookies:
     Nous aimerions pouvoir les analyser afin de voir comment les gens vivent le sommet Climate:RED et ainsi nous assurer que nous pouvons améliorer les futures conférences et sommets virtuels.
     Vous pouvez modifier vos préférences en cliquant sur {0} dans le pied de page du site.
 
-session:
-  title: Voir la session
-  speakerHeading: Intervenants
-  hostHeading: Hôtes
-  infoHeading: Information sur la session
-  linksHeading: Liens
-  showPoll: Autoriser un sondage
-  seeMore: Voir plus
-  seeLess: Voir moins
-  noInterpret: Votre navigateur ne prend pas en charge l'interprétation, désolé !
-  joinLiveQandA: Participez aux questions-réponses en direct
-  linksWillBeAvailable: Les liens des sessions seront disponibles 15 minutes avant l'heure de lancement.
-  sessionWillBeHostedIn: Cette sessions aura lieu à
-  interestRegisteredConfirmation: Votre intérêt a bien été enregistré!
-  personInterested: '{0} personnes intéressée'
-  scheduleHeading: Programme
-  actionsHeading: Actions
-  hostedByHeading: Présenté par
-  contactHost: Contacter l’hôte
-  sessionOnlyAvailableIn: Veuillez noter que cette session n’est disponible qu’en
-
 oneToMany:
   label: Langue audio
   noVideo: Aucune vidéo disponible
@@ -156,62 +364,6 @@ oneToMany:
 videoEmbed:
   noLive: La diffusion en direct est actuellement indisponible, veuillez revenir plus tard.
 
-schedule:
-  title: Programme
-  description: Explorez les sessions disponibles et planifiez votre expérience en ajoutant des rappels à votre calendrier.
-  close: Fermer
-  past: Précédemment
-  now: Maintenant
-  present: Maintenant
-  future: À venir
-  addToCalendar: Ajouter au calendrier
-  showAll: Tout montrer
-  hideAll: Tout cacher
-  hidePastSessions: Cacher les sessions passées
-  showPastSessions: Montrer les sessions passées
-  dates:
-    ninth: 9 septembre
-    tenth: 10 septembre
-  search: Recherche
-  showingResultsFor: Montrer les résultats pour "{0}"
-  redCrossRedCrescentMembersOnly: Membres de la Croix-Rouge et du Croissant-Rouge uniquement
-  filters:
-    all: Tous
-    showFilters: Montrer les filtres
-    clearFilters: Cacher les filtres
-    date: Date
-    track: Axe
-    interactivity:
-      interactivity: Intéractivité
-      interactive: Intéractif
-      nonInteractive: Non intéractif
-    platform:
-      platform: Plateforme
-      zoom: Zoom
-    device:
-      device: Dispositif
-      desktopOnly: Ordinateur seulement
-      mobileOnly: Mobile seulement
-    recorded:
-      recorded: Enregistré
-      willBeRecorded: Sera enregistré
-      notRecorded: Non enregistré
-  attributes:
-    sessionAttributes: Attributs de session
-  actions:
-    viewSession: Voir la session
-    joinSession: Joindre la session
-    previewSession: Prévisualiser la session
-    registerInterest: Enregistrer un intérêt
-    registerInterestSubject: Enregistrer un intérêt dans la session climate:red
-    registerInterestBody: Je suis intéressé(e) par votre session climate:red - "{0}"
-    interestRegistered: Intérêts enregistrés
-  workshops:
-    workshop: Atelier
-    workshops: Ateliers
-    title: Ateliers interactifs
-    description: Participez à l'un des ateliers interactifs suivants
-
 errors:
   title: Quelque chose n'a pas marché
   general: Une erreur inattendue s'est produite, veuillez réessayer.
@@ -219,96 +371,3 @@ errors:
 
 faqs:
   title: FAQ
-
-#
-# v2 - deconf
-#
-deconf: {}
-
-#
-# v2 - IFRC
-#
-ifrc:
-  general:
-    # appName: PlanetRed
-    # backToAtrium: Back to Atrium
-    # notSelected: (Please select)
-    # genericError: Something went wrong, please try again
-
-  login:
-    title: Connexion
-    infoText: Après votre inscription, nous vous enverrons un email de confirmation. L'e-mail contiendra un lien qui vous connectera. Le lien expirera au bout de 30 minutes. Si vous ne recevez rien, veuillez vérifier votre dossier “Courriers indésirables”.
-    email:
-      label: Adresse E-mail
-      placeholder: 'par exemple: geoff@example.com'
-      help: L'adresse e-mail avec laquelle vous vous êtes inscrit à la conférence
-    badEmail: Mauvais e-mail
-    doneText: Código de inicio de sesión enviado
-    submitButton: Demander un code de connexion
-    # registerLabel: Not registered yet?
-    # registerAction: Register here
-    # genericError: Something went wrong, please try again
-
-  register:
-    title: Inscrivez
-    infoText: >
-      Inscrivez-vous à Climate:Red
-    name:
-      label: Nom complet
-      placeholder: 'par exemple: Dan Howard'
-      help: Votre nom complet
-    email:
-      label: l'adresse email
-      placeholder: 'par exemple: dan@example.com'
-      help: Vous utiliserez votre e-mail pour vous connecter à la conférence
-    language:
-      label: Langue
-      help: Ce sera votre langue principale pour la conférence
-    country:
-      label: Pays
-      help: Pour que nous puissions voir la portée de la conférence
-    affiliation:
-      label: Votre affiliation
-      placeholder: 'par exemple: Membre du personnel de la FICR'
-      help: Affiliation au mouvement Croix-Rouge Croissant-Rouge (par exemple, personnel / bénévole / membre du conseil d'administration / membre d’une Société nationale / FICR / CICR / centre de référence; ou aucun)
-    submitButton: Inscrivez
-    consentText: Je confirme avoir lu et accepté les conditions liées ci-dessous
-    termsLink: Termes et conditions
-    privacyLink: Politique de confidentialité
-    doneText: >
-      Nous vous avons envoyé un e-mail de vérification.
-    # loginLabel: Already registered?
-    # loginAction: Log in here
-
-  profile:
-    title: Votre profil
-    emailText: Votre adresse E-mail
-    localeText: Langue choisie
-    whenText: Connecté
-    # registeredText: Registered
-    nameText: Nom
-    countryText: Pays
-    affiliationText: Affiliation
-    logoutButton: Se déconnecter
-    deleteButton: Supprimer le compte
-    deleteText: C'est permanent, êtes-vous sûr?
-    # actionLabel: Actions
-    # dangerLabel: Danger zone
-
-  atrium:
-    title: Atrium
-    sponsorHeading: Partenaires
-    onlineNow: En ligne maintenant
-    carbonSaved: Des kilogrammes de CO₂ économisés
-    # twitterTitle: Social
-    twitterSubtitle: 'Tweeter avec #PlanetRed'
-    # twitterUrl: 'https://twitter.com'
-    # conferenceOver: >
-    #   -
-
-  footer:
-    # appName: PlanetRed
-    # privacy: Privacy
-    # guidelines: Community Guidelines
-    # terms: Terms & Conditions
-    # faqs: FAQs
